# collective.immediatecreate

./: .gitignore  .travis.yml  CHANGES.rst  Dockerfile  Makefile  README.rst  bootstrap.sh  buildout.cfg  instance.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  sources.ini  test.cfg
.github/workflows/: test.yml
src/collective/immediatecreate/: __init__.py  adding.py  behaviors.py  configure.zcml  editing.py  events.py  setuphandlers.py  testing.py  upgrades.py
src/collective/immediatecreate/browser/: configure.zcml
src/collective/immediatecreate/tests/: test_adding.py  test_robot.py  test_setup.py
src/collective/immediatecreate/tests/robot/: test_immediatecreate.robot
